--- a/style/contact.css
+++ b/style/contact.css
@@ -84,10 +84,16 @@
 .location .container1 .scroller h2,
 h4 {
     text-align: center;
+       font-family: var(--poppins-Text);
+}
+
+.location .container1 .scroller h2{
+     font-size: 1.4rem;
 }
 
 .location .container1 .scroller h4 {
-    font-size: 20px;
+    font-size: 1.1rem;
+ 
 }
 
 .location .container1 .scroller {
@@ -116,6 +122,7 @@ h4 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 10px;
     bottom: -10px;
     padding: 10px 0;
     border-radius: 0 0 30px 30px;
